# as-rigid-as-possible-opengl-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: libigl.cmake
data/: armadillo_1k.off  cactus_highres.off  cylinder_small.off  dino.off  square_21_spikes.off
fresh_start/: mesh.h  scene.h  window.cpp
hako_project/: CMakeLists.txt
hako_project/common/: controls.cpp  view.cpp
hako_project/src/: TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader  kopya.cpp  main.cpp  mesh.cpp  mesh.h
other_projects/custom_shadered_opengl/: CMakeLists.txt
other_projects/custom_shadered_opengl/common/: view.cpp
other_projects/custom_shadered_opengl/src/: TransformVertexShader.vertexshader  mahmut.cpp  mesh.cpp
other_projects/lbertand/: ARAPInitEnum.h  ARAPSolver.cpp  ARAPSolver.h  CMakeLists.txt  ControlPoint.h  InterfaceManager.cpp  InterfaceManager.h  Mesh.cpp  Mesh.h  README.md  TestARAP.cpp  TestARAP.h  main.cpp
other_projects/opengl_tutorial/common/: controls.cpp
other_projects/opengl_tutorial/misc05_picking/: misc05_picking_BulletPhysics  misc05_picking_custom  misc05_picking_slow_easy
other_projects/opengl_tutorial/playground/: playground  playground.cpp
other_projects/opengl_tutorial/tutorial01_first_window/: tutorial01_first_window
other_projects/opengl_tutorial/tutorial02_red_triangle/: tutorial02_red_triangle
other_projects/opengl_tutorial/tutorial03_matrices/: tutorial03_matrices
other_projects/opengl_tutorial/tutorial04_colored_cube/: ColorFragmentShader.fragmentshader  tutorial04_colored_cube
other_projects/opengl_tutorial/tutorial05_textured_cube/: tutorial05_textured_cube
other_projects/opengl_tutorial/tutorial06_keyboard_and_mouse/: tutorial06_keyboard_and_mouse
other_projects/opengl_tutorial/tutorial07_model_loading/: tutorial07.cpp  tutorial07_model_loading
other_projects/opengl_tutorial/tutorial08_basic_shading/: tutorial08_basic_shading
src/: CMakeLists.txt  ControlPoint.h  camera.h  main.cpp  mesh.cpp  mesh.h  meshArap.cpp  meshArap.h  scene.cpp  scene.h  window.cpp  window.h
src/data/: bar1.off  bar2.off  bar3.off  square_21.off  video_data.txt
(+13 files in other folders)
